grass (5.7.0-6) unstable; urgency=low

  * debian/control
    - edits to description
    - create grass-doc package

 -- Steve Halasz <debian@adkgis.org>  Wed,  1 Dec 2004 18:39:04 -0500

grass (5.7.0-5) unstable; urgency=low

  * debian/control
    - change package name back to 'grass'
    - convert to team maintenance with pkg-grass-general@lists.alioth.debian.org
      as maintainer
    - add build-deps:
      + dpatch
      + libjpeg62-dev
      + libpng12-dev
      + lesstif2-dev
    - remove build-deps:
      + extra second build-dep on postgresql-dev
      + libgd2-xpm-dev
      + postgresql-client
  * debian/rules:
    - clean raster/r.terraflow/IOStream/lib/src/libiostream.a
    - add --with-odbc
    - add --with-cxx
    - add --with-glw
    - add --with-motif
    - remove --with-dbm and --without-dbm
    - remove --with-blas and --with-lapack

 -- Steve Halasz <debian@adkgis.org>  Mon, 29 Nov 2004 18:17:46 -0500

grass5.7 (5.7.0-4) unstable; urgency=low

  * Add grass57 man page
  * Make etc/water/seg executable

 -- Steve Halasz <debian@adkgis.org>  Tue, 12 Oct 2004 11:18:55 -0400

grass5.7 (5.7.0-3) unstable; urgency=low

  * Split out separate libgrass5.7 and libgrass5.7-dev packages
  * Add grass libs dir to ld.so.conf. Make sure it is removed too.

 -- Steve Halasz <debian@adkgis.org>  Wed, 22 Sep 2004 00:36:12 -0400

grass5.7 (5.7.0-2) unstable; urgency=low

  * silence executable-not-elf-or-script lintian warning by making most tcl 
    scripts not executable
  * silence interpreter-not-absolute lintian warning by inserting absolute path in 
    shebang
  * make tcltkgrass/main/tksys.tcl executable

 -- Steve Halasz <debian@adkgis.org>  Fri,  3 Sep 2004 11:38:18 -0400

grass5.7 (5.7.0-1) unstable; urgency=low

  * install files to locations prescribed by debian policy
  * fix paths hardcoded during build using script from 5.0.3 package
  * change package name to enable concurrent install with stable grass package