@@ -1,1 +1,1 @@
-usr/lib/grass57/docs/html usr/share/doc/grass-doc
+usr/lib/grass/docs/html usr/share/doc/grass-doc
