@@ -1,1 +1,1 @@
-/usr/lib/grass57/include
+usr/lib/grass/include
