@@ -1,1 +1,1 @@
-/usr/lib/grass57/lib
+usr/lib/grass/lib
